--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.cjs"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,9 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
-    "express": "^4.18.3"
+    "body-parser": "^1.20.2",
+    "express": "^4.18.3",
+    "mongodb": "^6.4.0",
+    "mongoose": "^8.2.0"
   }
 }
